--- a/app/src/main/res/layout/activity_business_display.xml
+++ b/app/src/main/res/layout/activity_business_display.xml
@@ -59,7 +59,7 @@
                     android:maxLines="1"
                     android:textColor="#333333"
                     android:textColorHint="#B3B3B3"
-                    android:textSize="13dp"
+                    android:textSize="16sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintLeft_toLeftOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
