--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -73,8 +73,8 @@
                     android:text="@string/search_title" />
 
                 <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="23dp"
+                    android:layout_height="23dp"
                     android:layout_gravity="center_vertical"
                     android:src="@drawable/search" />
             </LinearLayout>
@@ -111,8 +111,8 @@
                     app:tabTextColor="#666666" />
 
                 <View
-                    android:layout_width="9dp"
-                    android:layout_height="0dp"
+                    android:layout_width="35dp"
+                    android:layout_height="30dp"
                     android:background="@drawable/shap_jianbian_bai"
                     app:layout_constraintBottom_toBottomOf="@id/tab_layout"
                     app:layout_constraintRight_toRightOf="@id/tab_layout"
@@ -120,13 +120,12 @@
 
                 <com.qmuiteam.qmui.alpha.QMUIAlphaImageButton
                     android:id="@+id/more_tab_bt"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="20dp"
+                    android:layout_height="20dp"
                     android:layout_gravity="center_vertical"
-                    android:background="@color/white"
-                    android:paddingRight="14dp"
-                    android:paddingLeft="10dp"
-                    android:src="@drawable/more_left_point"
+                    android:layout_marginRight="14dp"
+                    android:layout_marginLeft="10dp"
+                    android:background="@drawable/menu2"
                     app:layout_constraintBottom_toBottomOf="@id/tab_layout"
                     app:layout_constraintRight_toRightOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
@@ -148,19 +147,21 @@
         android:id="@+id/left_nv"
         android:layout_width="253dp"
         android:layout_height="match_parent"
-        android:layout_gravity="left"
+        android:layout_gravity="start"
         android:fitsSystemWindows="true">
 
     </com.google.android.material.navigation.NavigationView>
     <!--右侧边抽屉菜单-->
-    <com.google.android.material.navigation.NavigationView
+    <LinearLayout
         android:id="@+id/right_nv"
         android:layout_width="266dp"
         android:layout_height="match_parent"
-        android:layout_gravity="right"
+        android:layout_gravity="end"
         android:fitsSystemWindows="true">
+        <include
+            layout="@layout/nav_all_series"/>
+    </LinearLayout>
 
-    </com.google.android.material.navigation.NavigationView>
 
 
 </androidx.drawerlayout.widget.DrawerLayout>
