--- a/app/src/main/res/layout/nav_all_series.xml
+++ b/app/src/main/res/layout/nav_all_series.xml
@@ -1,28 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:background="@color/white"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/all_series_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:layout_marginTop="81dp"
+        android:layout_marginTop="41dp"
         android:text="@string/all_series"
         android:textColor="@color/black"
         android:textSize="25sp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/all_series_rv"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/all_series_tv" />
+        android:layout_marginTop="16dp" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
